--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /PrimeiroPrograma/build/
+/HoraDoSistema/nbproject/private/
+/HoraDoSistema/build/
+/IdiomaSistema/nbproject/private/
+/IdiomaSistema/build/
+/ResolucaoTela/nbproject/private/
+/ResolucaoTela/build/
