--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 /IdiomaSistema/build/
 /ResolucaoTela/nbproject/private/
 /ResolucaoTela/build/
+/OlaMundoSwing/nbproject/private/
+/OlaMundoSwing/build/
+/OlaMundoJavaFX/nbproject/private/
+/OlaMundoJavaFX/dist/
+/OlaMundoJavaFX/build/
+/IdiomaSistema/dist/
+/OlaMundoSwing/dist/
