Tipos Primitivos && Manipulação de Dados

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 /OlaMundoSwing/dist/
 /RelogioSwing/nbproject/private/
 /RelogioSwing/build/
+/TiposPrimitivos/nbproject/private/
+/TiposPrimitivos/build/
+/TesteTipos/nbproject/private/
+/TesteTipos/build/
+/SomaSwing/nbproject/private/
+/SomaSwing/build/
