--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /TesteTipos/build/
 /SomaSwing/nbproject/private/
 /SomaSwing/build/
+/CalculadoraIdade/nbproject/private/
+/CalculadoraIdade/build/
