Operadores Aritmétricos && Classe Math

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 /SomaSwing/build/
 /CalculadoraIdade/nbproject/private/
 /CalculadoraIdade/build/
+/OperadoresAritmeticos/nbproject/private/
+/OperadoresAritmeticos/build/
+/OperadoresSwing/nbproject/private/
+/OperadoresSwing/build/
