--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /OperadoresAritmeticos/build/
 /OperadoresSwing/nbproject/private/
 /OperadoresSwing/build/
+/SuperCalculadora/nbproject/private/
+/SuperCalculadora/build/
