Operadores Lógicos e Relacionais

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@
 /OperadoresSwing/build/
 /SuperCalculadora/nbproject/private/
 /SuperCalculadora/build/
+/OperadorTernario/nbproject/private/
+/OperadorTernario/build/
+/ComparacaoString/nbproject/private/
+/ComparacaoString/build/
+/OperadoresLogicos/nbproject/private/
+/OperadoresLogicos/build/
