--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /ComparacaoString/build/
 /OperadoresLogicos/nbproject/private/
 /OperadoresLogicos/build/
+/LeitorPensamento/nbproject/private/
+/LeitorPensamento/build/
