--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@
 /OperadoresLogicos/build/
 /LeitorPensamento/nbproject/private/
 /LeitorPensamento/build/
+/ProgramaMedia/nbproject/private/
+/ProgramaMedia/build/
+/ProgramaIdade/nbproject/private/
+/ProgramaIdade/build/
+/ProgramaParImpar/nbproject/private/
+/ProgramaParImpar/build/
