Equação de Segundo Grau

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@
 /ProgramaIdade/build/
 /ProgramaParImpar/nbproject/private/
 /ProgramaParImpar/build/
+/EquacaoSegundoGrau/nbproject/private/
+/EquacaoSegundoGrau/build/
