--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@
 /ProgramaParImpar/build/
 /EquacaoSegundoGrau/nbproject/private/
 /EquacaoSegundoGrau/build/
+/VotacaoSwing/nbproject/private/
+/VotacaoSwing/build/
+/ProgramaPernas/nbproject/private/
+/ProgramaPernas/build/
