--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@
 /VotacaoSwing/build/
 /ProgramaPernas/nbproject/private/
 /ProgramaPernas/build/
+/ProjetoTriangulo/nbproject/private/
+/ProjetoTriangulo/build/
