--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@
 /ProgramaPernas/build/
 /ProjetoTriangulo/nbproject/private/
 /ProjetoTriangulo/build/
+/ExercicioRepita/nbproject/private/
+/ExercicioRepita/build/
